--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <div class="container">
         <ul>
-            <li><a href="colors.htmlm">Colors</a></li>
+            <li><a href="colors.html">Colors</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="random-image.html">Random image</a></li>
+            <li><a href="randomImages.html">Random image</a></li>
         </ul>
     </div>
     
